--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ urlCache/*.cache
 configuration.yaml
 discord.yaml
 id_rsa
+last_remote_cron_timestamp
 makeCards_FINISHED
 monitor_discord_changes_TRIGGERED
 mpc_monitor.json
