--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -38,7 +38,7 @@ db_destination_path:
 tts_destination_path:
 
 # Remote DragnCards path to image folder
-dragncards_remote_image_path: /var/www/dragncards.com/dragncards/frontend/public/images/cards/English/
+dragncards_remote_image_path: /mnt/volume_postgres/cards/English/
 
 # Remote DragnCards path to JSON folder
 dragncards_remote_json_path: /var/www/dragncards.com/dragncards/frontend/src/cardDB/ALeP/
