--- a/configuration.cron.yaml
+++ b/configuration.cron.yaml
@@ -2,7 +2,7 @@
 sheet_gdid: ***
 
 # Local path to the artwork folder
-artwork_path: /home/user/Drive/A Long-extended Party/CardImages
+artwork_path: /home/user/Drive/CardImages
 
 # Path to GIMP console executable
 gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
@@ -14,19 +14,19 @@ magick_path: C:\Program Files\ImageMagick-7.0.10-Q16-HDRI\magick.exe
 dragncards_id_rsa_path:
 
 # Path to remote logs folder (may be empty)
-remote_logs_path: /home/user/Drive/A Long-extended Party/Logs
+remote_logs_path: /home/user/Drive/Logs
 
 # Path to OCTGN set.xml destination folder (may be empty)
-octgn_set_xml_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Set Folders
+octgn_set_xml_destination_path: /home/user/Drive/Playtesting/OCTGN Files/Set Folders
 
 # Path to OCTGN set.xml scratch destination folder (may be empty)
-octgn_set_xml_scratch_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Scratch Set Folders
+octgn_set_xml_scratch_destination_path: /home/user/Drive/Playtesting/OCTGN Files/Scratch Set Folders
 
 # Path to OCTGN .o8d destination folder (may be empty)
-octgn_o8d_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Encounter Decks
+octgn_o8d_destination_path: /home/user/Drive/Playtesting/OCTGN Files/Encounter Decks
 
 # Path to OCTGN .o8d scratch destination folder (may be empty)
-octgn_o8d_scratch_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Scratch Encounter Decks
+octgn_o8d_scratch_destination_path: /home/user/Drive/Playtesting/OCTGN Files/Scratch Encounter Decks
 
 # Path to OCTGN image destination folder (may be empty)
 octgn_image_destination_path:
@@ -69,16 +69,16 @@ parallelism: default
 set_ids:
   - all  # all non-scratch sets
   - all_scratch  # all scratch sets
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # List of set IDs to ignore
 ignore_set_ids:
-  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # List of set IDs to copy to OCTGN image destination
 set_ids_octgn_image_destination:
 #  - all  # all non-scratch sets
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # Creating set.xml files for OCTGN (true or false)
 octgn_set_xml: true
