--- a/configuration.nightly.yaml
+++ b/configuration.nightly.yaml
@@ -2,7 +2,7 @@
 sheet_gdid: ***
 
 # Local path to the artwork folder
-artwork_path: C:\Google Drive\A Long-extended Party\CardImages
+artwork_path: C:\Google Drive\CardImages
 
 # Path to GIMP console executable
 gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
@@ -14,7 +14,7 @@ magick_path: C:\Program Files\ImageMagick-7.0.10-Q16-HDRI\magick.exe
 dragncards_id_rsa_path: id_rsa
 
 # Path to remote logs folder (may be empty)
-remote_logs_path: C:\Google Drive\A Long-extended Party\Logs
+remote_logs_path: C:\Google Drive\Logs
 
 # Path to OCTGN set.xml destination folder (may be empty)
 octgn_set_xml_destination_path:
@@ -29,13 +29,13 @@ octgn_o8d_destination_path:
 octgn_o8d_scratch_destination_path:
 
 # Path to OCTGN image destination folder (may be empty)
-octgn_image_destination_path: C:\Google Drive\A Long-extended Party\Playtesting\OCTGN Files\ImageDatabase
+octgn_image_destination_path: C:\Google Drive\Playtesting\OCTGN Files\ImageDatabase
 
 # Path to DB destination folder (may be empty)
-db_destination_path: C:\Google Drive\A Long-extended Party\RenderedImages
+db_destination_path: C:\Google Drive\RenderedImages
 
 # Path to TTS destination folder (may be empty)
-tts_destination_path: C:\Google Drive\A Long-extended Party\TTS
+tts_destination_path: C:\Google Drive\TTS
 
 # Remote DragnCards path to image folder
 dragncards_remote_image_path: /mnt/volume_postgres/cards/English/
@@ -69,16 +69,16 @@ parallelism: default
 set_ids:
   - all  # all non-scratch sets
   - all_scratch  # all scratch sets
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # List of set IDs to ignore
 ignore_set_ids:
-  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # List of set IDs to copy to OCTGN image destination
 set_ids_octgn_image_destination:
 #  - all  # all non-scratch sets
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # Creating set.xml files for OCTGN (true or false)
 octgn_set_xml: false
