--- a/configuration.release.yaml
+++ b/configuration.release.yaml
@@ -2,7 +2,7 @@
 sheet_gdid: ***
 
 # Local path to the artwork folder
-artwork_path: C:\Google Drive\A Long-extended Party\CardImages
+artwork_path: C:\Google Drive\CardImages
 
 # Path to GIMP console executable
 gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
@@ -69,16 +69,16 @@ parallelism: default
 set_ids:
 #  - all  # all non-scratch sets
 #  - all_scratch  # all scratch sets
-  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # List of set IDs to ignore
 ignore_set_ids:
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # List of set IDs to copy to OCTGN image destination
 set_ids_octgn_image_destination:
 #  - all  # all non-scratch sets
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f
 
 # Creating set.xml files for OCTGN (true or false)
 octgn_set_xml: true
