--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Output/Scripts/*.json
 Output/Scripts/*.sh
 Renderer/Fonts/*.ttf
 Renderer/Fonts/*.TTF
+Renderer/Icons/*.png
 setEons/*.xml
 setEons/*.xml.old
 setOCTGN/*.xml
