--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ monitor_discord_changes_TRIGGERED
 mpc_monitor.json
 pipeline_STARTED
 remote_logs_path
+REPROCESS_ALL
 ringsdb.json
 ringsdb_cookies.json
 run_setup.bat
