1. Fix renderer bugs. 2. Make pylint happy

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Renderer/Fonts/*.ttf
 Renderer/Fonts/*.TTF
 Renderer/GeneratedImages/*.jpg
 Renderer/GeneratedImages/*.png
+Renderer/GeneratedImages/*.json
 Renderer/Icons/*.png
 Renderer/Output/*.html
 Renderer/Output/*.jpg
