--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ configuration.yaml
 discord.yaml
 download_time.txt
 dragncards.json
+dragncards_folder.txt
 id_rsa
 last_remote_cron_timestamp
 makeCards_FINISHED
