--- a/configuration.cron.yaml
+++ b/configuration.cron.yaml
@@ -90,7 +90,7 @@ octgn_o8d: true
 ringsdb_csv: true
 
 # Creating JSON files for DragnCards (true or false)
-dragncards_json: false
+dragncards_json: true
 
 # Creating JSON files for Hall of Beorn (true or false)
 hallofbeorn_json: false
