Add modification time to DragnCards JSON

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ discord.yaml
 download_time.txt
 dragncards.json
 dragncards_folder.txt
+dragncards_timestamps.json
 generate_dragncards.json
 id_rsa
 last_remote_cron_timestamp
