Script to get a list of all Discord users

--- a/discord.default.yaml
+++ b/discord.default.yaml
@@ -19,5 +19,8 @@ dragncards_id_rsa_path:
 # DragnCards hostname (username@hostname)
 dragncards_hostname: 
 
+# Assistants to ignore (a comma-separated list)
+ignore_assistants: 
+
 # Users to ignore (a comma-separated list)
 ignore_users: 
