--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ id_rsa
 last_remote_cron_timestamp
 makeCards_FINISHED
 monitor_discord_changes_TRIGGERED
+monitor_remote_pipeline.json
 mpc_monitor.json
 pipeline_STARTED
 remote_logs_path
