Generate lightweight artwork by Discord bot (third draft)

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ dragncards_folder.txt
 dragncards_timestamps.json
 expire_dragncards.json
 generate_dragncards.json
+generate_dragncards.json.backup
 id_rsa
 last_remote_cron_timestamp
 makeCards_FINISHED
