--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ generate_dragncards.json
 generate_dragncards.json.backup
 id_rsa
 last_remote_cron_timestamp
+mail.yaml
 makeCards_FINISHED
 monitor_discord_changes_TRIGGERED
 monitor_remote_pipeline.json
