--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ setEons/*.xml
 setEons/*.xml.old
 setOCTGN/*.xml
 setOCTGN/*.xml.old
+Temp/dragncards_folder.txt
+Temp/expire_dragncards.json
+Temp/monitor_discord_changes.txt
+Temp/reprocess_count.json
 Temp/*/*
 urlCache/*.cache
 
@@ -42,24 +46,21 @@ configuration.yaml
 discord.yaml
 download_time.txt
 dragncards.json
-dragncards_folder.txt
 dragncards_timestamps.json
-expire_dragncards.json
 generate_dragncards.json
 generate_dragncards.json.backup
 id_rsa
 internet_state
-last_remote_cron_timestamp
+last_remote_cron_timestamp.txt
 mail.yaml
 mails
 makeCards_FINISHED
-monitor_discord_changes_TRIGGERED
 monitor_remote_pipeline.json
 mpc_monitor.json
+mpc_monitor.lock
 mpc_monitor_cookies.json
 pipeline_STARTED
-remote_logs_path
-reprocess.cnt
+remote_logs_path.txt
 REPROCESS_ALL
 ringsdb.json
 ringsdb_cookies.json
@@ -75,7 +76,6 @@ setGenerator_CREATED
 sheets.json
 *.icc
 *.cnt
-*.lock
 *.log
 *.swp
 ~*.*
