--- a/.gitignore
+++ b/.gitignore
@@ -45,38 +45,26 @@ urlCache/*.cache
 
 configuration.yaml
 discord.yaml
-download_time.txt
-dragncards.json
-dragncards_timestamps.json
-generate_dragncards.json
-generate_dragncards.json.backup
 id_rsa
 internet_state
-last_remote_cron_timestamp.txt
 mail.yaml
 mails
 makeCards_FINISHED
-monitor_remote_pipeline.json
 mpc_monitor.json
 mpc_monitor.lock
 mpc_monitor_cookies.json
 pipeline_STARTED
 remote_logs_path.txt
 REPROCESS_ALL
-ringsdb.json
-ringsdb_cookies.json
 ringsdb_prod_cookies.json
-ringsdb_stat.json
+ringsdb_test_cookies.json
 run_setup.bat
 run_cleanup.bat
 runBeforeSE_STARTED
-sanity_check.txt
 scheduled_backup.json
 setGenerator.seproject
 setGenerator_CREATED
-sheets.json
 *.icc
-*.cnt
 *.log
 *.swp
 ~*.*
