Improve playtesting reports

--- a/discord.default.yaml
+++ b/discord.default.yaml
@@ -28,5 +28,8 @@ ignore_assistants:
 # Users to ignore (a comma-separated list)
 ignore_users: 
 
+# Playtesters to ignore (a comma-separated list)
+ignore_playtesters: 
+
 # Discord Webhook URL for ringsdb_alep_decks channel
 ringsdb_alep_decks_webhook_url: 
