--- a/configuration.nightly.yaml
+++ b/configuration.nightly.yaml
@@ -87,7 +87,7 @@ octgn_o8d: true
 # Creating CSV files for RingsDB (true or false)
 ringsdb_csv: false
 
-# Creating JSON files for DragnCards (true or false)
+# Creating JSON and TSV files for DragnCards (true or false)
 dragncards_json: false
 
 # Creating JSON files for Hall of Beorn (true or false)
