--- a/configuration.nightly.yaml
+++ b/configuration.nightly.yaml
@@ -43,7 +43,10 @@ dragncards_remote_image_path: /mnt/volume_postgres/cards/English/
 # Remote DragnCards path to JSON folder
 dragncards_remote_json_path: /var/www/dragncards.com/dragncards/frontend/src/cardDB/ALeP/
 
-# Remote DragnCards path to .o8d folder
+# Remote DragnCards path to TSV folder
+dragncards_remote_tsv_path: /mnt/volume_postgres/tsv/unreleased/
+
+# Remote DragnCards path to .O8D folder
 dragncards_remote_deck_path: /var/www/dragncards.com/Lord-of-the-Rings/o8g/Decks/Quests/QPT-AleP-Playtest/
 
 # Whether to reprocess all cards (true)
